# todo-list

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  MainWindow.cpp  MainWindow.h  Observer.h  README.md  Serializable.h  Subject.h  Todo.cpp  Todo.h  TodoEditDialog.cpp  TodoEditDialog.h  TodoList.cpp  TodoList.h  TodoListQAbstractTableModelAdapter.cpp  TodoListQAbstractTableModelAdapter.h  TodoTableView.cpp  TodoTableView.h  main.cpp
test/: CMakeLists.txt  test_controller_class.cpp  test_todo_class.cpp  test_todo_list_class.cpp
